--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,27 +2,27 @@ services:
   app:
     build: .
     ports:
-      - "5000:8080"
+      - "${APP_PORT}:8080"
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
-      - ConnectionStrings__DefaultConnection=Host=db;Database=erp_db;Username=postgres;Password=postgres
+      - ConnectionStrings__DefaultConnection=Host=db;Database=${DB_NAME};Username=${DB_USER};Password=${DB_PASSWORD}
     volumes:
-      - ./wwwroot/uploads:/app/wwwroot/uploads # Це збереже картинки на твоєму диску
+      - ./wwwroot/uploads:/app/wwwroot/uploads
     depends_on:
       db:
         condition: service_healthy
-  # База даних PostgreSQL
+
   db:
     image: postgres:16
     restart: always
     environment:
-      POSTGRES_DB: erp_db
-      POSTGRES_USER: postgres  # Змінено з admin
-      POSTGRES_PASSWORD: postgres # Змінено з secret
+      POSTGRES_DB: ${DB_NAME}
+      POSTGRES_USER: ${DB_USER}
+      POSTGRES_PASSWORD: ${DB_PASSWORD}
     ports:
-      - "5432:5432"
+      - "${DB_PORT}:5432"
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U postgres -d erp_db"] # Тут теж міняємо на postgres
+      test: ["CMD-SHELL", "pg_isready -U ${DB_USER} -d ${DB_NAME}"]
       interval: 5s
       timeout: 5s
       retries: 5
